--- a/task-tracker/src/app/app.component.html
+++ b/task-tracker/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="container">
   <app-header color="green" text="Add"></app-header>
+  <app-tasks></app-tasks>
+  <p>this is p below app-tasks</p>
 </div>
